--- a/projektarbeit/package.json
+++ b/projektarbeit/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Transformation",
+  "name": "projektarbeit",
   "version": "0.1.0",
   "homepage": "./",
   "private": true,
@@ -7,7 +7,6 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@fontsource/roboto": "^4.5.8",
-    "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.10.10",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
